# push2HAL

./: .gitignore  MANIFEST.in  README.md  default.py  deploy.sh  json2hal.py  libHAL.py  misc.py  mkdocs.yml  pdf2hal  pdf2hal.py  pyproject.toml  requirements  setup.py
.github/workflows/: CI-test.yml
examples/: test.json  test_comments.json
examples/use-cases/: libConvert.py  run.py
push2HAL/: libHAL.py  misc.py
src/push2HAL/: default.py  elementHAL.py  execHAL.py  json2hal.py  libAPIHAL.py  libConvert.py  libHAL.py  misc.py  pdf2hal.py  push2hal.py
tests/: emse-01525674v3.tei.xml  test_libAPIHAL.py  test_libHAL.py  test_pdf2hal.py
uploadHAL/: default.py  libHAL.py  misc.py
